syntax = 'proto3';

option go_package = "github.com/hyperledger/burrow/execution/events/pbevents";

import "github.com/hyperledger/burrow/execution/errors/errors.proto";

package pbevents;

//--------------------------------------------------
// Event Service Definition
service Events {
    rpc EventPoll (SubIdParam) returns (PollResponse);
    rpc EventSubscribe (EventIdParam) returns (SubIdParam);
    rpc EventUnsubscribe (SubIdParam) returns (EventUnSub);
}

// Params
message EventIdParam {
    string eventId = 1;
}

message SubIdParam {
    string subId = 1;
}

// Results
message EventUnSub {
    bool result = 1;
}

message PollResponse {
    repeated ExecutionEvent events = 1;
}

//--------------------------------------------------
// Event dump

service ExecutionEvents {
    rpc GetEvents (GetEventsRequest) returns (stream GetEventsResponse);
}

message GetEventsRequest {
    BlockRange BlockRange = 1;
    uint32 BatchSize = 2;
    string Query = 3;
}

message GetEventsResponse {
    repeated ExecutionEvent events = 1;
}

message Bound {
    BoundType Type = 1;
    uint64 Index = 2;
    enum BoundType {
        // Index is absolute index of object in collection
        ABSOLUTE = 0;
        // Index is an offset reltiave to another bound determined by context
        RELATIVE = 1;
        // Ignore provided index and evaluate to latest index
        LATEST = 2;
        // Ignore provided index and stream new objects as they are generated
        STREAM = 3;
    }
}

// An inclusive range of blocks to include
message BlockRange {
    // How to interpret StartBlock
    Bound Start = 1;
    Bound End = 2;
}

//--------------------------------------------------
// Event types

message EventHeader {
    // Transaction type
    string TxType = 1;
    // The hash of the transaction that caused this event to be generated
    bytes TxHash = 2;
    // The type of event
    string EventType = 3;
    // EventID published with event
    string EventID = 4;
    // The block height at which this event was emitted
    uint64 Height = 5;
    // The index amongst all other events in the block of this event
    uint64 Index = 6;
}

message ExecutionEvent {
    EventHeader Header = 1;
    oneof EventData {
        EventDataTx EventDataTx = 2;
        EventDataCall EventDataCall = 3;
        EventDataLog EventDataLog = 4;
    }
}

message EventDataLog {
    bytes Address = 1;
    bytes Data = 2;
    repeated bytes Topics = 3;
}

message EventDataTx {
    bytes Return = 1;
    errors.Exception Exception = 2;
}

message EventDataCall {
    CallData CallData = 1;
    bytes Origin = 2;
    uint64 StackDepth = 3;
    bytes Return = 4;
    errors.Exception Exception = 5;
}

message CallData {
    bytes Caller = 1;
    bytes Callee = 2;
    bytes Data = 3;
    uint64 Value = 4;
    uint64 Gas = 5;
}
